--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </select>
             </div>
         </div>
-        <div class="flex items-center justify-between">
+        <div class="flex hidden  items-center justify-between">
             <div class="flex items-center uppercase font-medium gap-6">
                 <a class="hover:text-purple duration-200" href="#">Siyosat</a>
                 <a class="hover:text-purple duration-200" href="#">Jamiyat</a>
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <section class="bg-[url('/img/home-1.png')] bg-cover w-screen h-screen">
+    <section class="bg-[url('/img/home-1.png')] bg-center bg-cover w-screen h-screen">
         <div class="flex items-center justify-between px-[5rem] pt-[15%]">
             <div class="flex flex-col">
                 <p class="uppercase text-sm text-grey"><span class="text-purple">•</span> tezkor yangiliklar</p>
@@ -76,113 +76,201 @@
             <div class="flex flex-col items-center">
                 <div class="mb-12">
                     <p class="text-xs text-grey-100">Tahlil</p>
-                    <p class="my-2 font-bold">Davlat rahbari vazirlik, hokimlik va idoralar <br> bilan navbatdan
+                    <a href="#" class="hover:text-purple duration-300 my-2 font-bold">Davlat rahbari vazirlik, hokimlik
+                        va idoralar <br> bilan navbatdan
                         tashqari
                         yig‘ilishini o‘tkazdi
-                    </p>
+                    </a>
                     <p class="text-xs text-purple">Davlat</p>
                 </div>
                 <div class="mb-12">
                     <p class="text-xs text-grey-100">Tahlil</p>
-                    <p class="my-2 font-bold">Davlat rahbari vazirlik, hokimlik va idoralar <br> bilan navbatdan
+                    <a href="#" class="hover:text-purple duration-300 my-2 font-bold">Davlat rahbari vazirlik, hokimlik
+                        va idoralar <br> bilan navbatdan
                         tashqari
                         yig‘ilishini o‘tkazdi
-                    </p>
+                    </a>
                     <p class="text-xs text-purple">Davlat</p>
                 </div>
-                <div>
+                <div class="mb-12">
                     <p class="text-xs text-grey-100">Tahlil</p>
-                    <p class="my-2 font-bold">Davlat rahbari vazirlik, hokimlik va idoralar <br> bilan navbatdan
+                    <a href="#" class="hover:text-purple duration-300 my-2 font-bold">Davlat rahbari vazirlik, hokimlik
+                        va idoralar <br> bilan navbatdan
                         tashqari
                         yig‘ilishini o‘tkazdi
-                    </p>
+                    </a>
                     <p class="text-xs text-purple">Davlat</p>
                 </div>
             </div>
         </div>
 
         <div class="px-[5rem] mt-[100px] flex justify-between">
-            <div class="relative">
-                <img src="./img/image 19.png" class="border border-white" alt="">
-                <div class="flex flex-col absolute bottom-4 px-4">
-                    <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
-                    <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk britaniyalik
-                        raqibini
-                        <br>
-                        mag‘lubiyatga
-                        uchratdi
-                    </p>
+            <a href="#">
+                <div class="relative">
+                    <img src="./img/image 19.png" class="border border-white" alt="">
+                    <div class="flex flex-col absolute bottom-4 px-4">
+                        <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
+                        <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk
+                            britaniyalik
+                            raqibini
+                            <br>
+                            mag‘lubiyatga
+                            uchratdi
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="relative">
-                <img src="./img/image 19.png" class="border border-white" alt="">
-                <div class="flex flex-col absolute bottom-4 px-4">
-                    <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
-                    <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk britaniyalik
-                        raqibini
-                        <br>
-                        mag‘lubiyatga
-                        uchratdi
-                    </p>
+            </a>
+            <a href="#">
+                <div class="relative">
+                    <img src="./img/image 19.png" class="border border-white" alt="">
+                    <div class="flex flex-col absolute bottom-4 px-4">
+                        <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
+                        <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk
+                            britaniyalik
+                            raqibini
+                            <br>
+                            mag‘lubiyatga
+                            uchratdi
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="relative">
-                <img src="./img/image 19.png" class="border border-white" alt="">
-                <div class="flex flex-col absolute bottom-4 px-4">
-                    <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
-                    <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk britaniyalik
-                        raqibini
-                        <br>
-                        mag‘lubiyatga
-                        uchratdi
-                    </p>
+            </a>
+            <a href="#">
+                <div class="relative">
+                    <img src="./img/image 19.png" class="border border-white" alt="">
+                    <div class="flex flex-col absolute bottom-4 px-4">
+                        <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
+                        <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk
+                            britaniyalik
+                            raqibini
+                            <br>
+                            mag‘lubiyatga
+                            uchratdi
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="relative">
-                <img src="./img/image 19.png" class="border border-white" alt="">
-                <div class="flex flex-col absolute bottom-4 px-4">
-                    <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
-                    <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk britaniyalik
-                        raqibini
-                        <br>
-                        mag‘lubiyatga
-                        uchratdi
-                    </p>
+            </a>
+            <a href="#">
+                <div class="relative">
+                    <img src="./img/image 19.png" class="border border-white" alt="">
+                    <div class="flex flex-col absolute bottom-4 px-4">
+                        <p class="flex gap-2 text-xs mb-2">25 iyul 2021 <span class="text-purple">Sport</span></p>
+                        <p class="text-xs font-bold">19 yoshli Ulug‘bek Rashidov Olimpiya <br> finalida buyuk
+                            britaniyalik
+                            raqibini
+                            <br>
+                            mag‘lubiyatga
+                            uchratdi
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </section>
-    <section class="bg-white w-screen mt-[100px] text-black px-[5rem] h-screen">
+    <section class="bg-white w-screen mt-[150px] text-black px-[5rem] h-screen">
         <div class="grid grid-cols-12">
             <div class="col-span-3 h-full border border-r-transparent px-7 py-4 border-grey-300">
                 <p class="font-bold text-3xl mb-2.5">Aktual yangiliklar</p>
-                <div
-                    class="font-medium py-4 px-3 border-transparent hover:bg-grey-500 border duration-200 hover:border-purple line-clamp-3 overflow-hidden">
-                    <p>Samarqand viloyatida chorva <br> mollarining asosiy qismi aholi <br> tomonidan
-                        boqilayotgani</p>
-                    <p class="text-xs text-grey-400 flex gap-3 mt-2">Bugun, 15:21 <span
-                            class="text-purple">Davlat</span></p>
-                </div>
-                <div
-                    class="font-medium py-4 px-3 border-transparent hover:bg-grey-500 border duration-200 hover:border-purple line-clamp-3 overflow-hidden">
-                    <p>Samarqand viloyatida chorva <br> mollarining asosiy qismi aholi <br> tomonidan
-                        boqilayotgani</p>
-                    <p class="text-xs text-grey-400 flex gap-3 mt-2">Bugun, 15:21 <span
-                            class="text-purple">Davlat</span></p>
-                </div>
-                <div
-                    class="font-medium py-4 px-3 border-transparent hover:bg-grey-500 border duration-200 hover:border-purple line-clamp-3 overflow-hidden">
-                    <p>Samarqand viloyatida chorva <br> mollarining asosiy qismi aholi <br> tomonidan
-                        boqilayotgani</p>
-                    <p class="text-xs text-grey-400 flex gap-3 mt-2">Bugun, 15:21 <span
-                            class="text-purple">Davlat</span></p>
+                <a href="#">
+                    <div
+                        class="font-medium py-4 px-3 border-transparent hover:bg-grey-500 border duration-200 hover:border-purple line-clamp-3 overflow-hidden">
+                        <p>Samarqand viloyatida chorva <br> mollarining asosiy qismi aholi <br> tomonidan
+                            boqilayotgani</p>
+                        <p class="text-xs text-grey-400 flex gap-3 mt-2">Bugun, 15:21 <span
+                                class="text-purple">Davlat</span></p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div
+                        class="font-medium py-4 px-3 border-transparent hover:bg-grey-500 border duration-200 hover:border-purple line-clamp-3 overflow-hidden">
+                        <p>Samarqand viloyatida chorva <br> mollarining asosiy qismi aholi <br> tomonidan
+                            boqilayotgani</p>
+                        <p class="text-xs text-grey-400 flex gap-3 mt-2">Bugun, 15:21 <span
+                                class="text-purple">Davlat</span></p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div
+                        class="font-medium py-4 px-3 border-transparent hover:bg-grey-500 border duration-200 hover:border-purple line-clamp-3 overflow-hidden">
+                        <p>Samarqand viloyatida chorva <br> mollarining asosiy qismi aholi <br> tomonidan
+                            boqilayotgani</p>
+                        <p class="text-xs text-grey-400 flex gap-3 mt-2">Bugun, 15:21 <span
+                                class="text-purple">Davlat</span></p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-span-6 relative flex flex-col items-center justify-center">
+                <img src="./img/home2.png" class="w-full" alt="">
+                <div class="absolute text-center bottom-10">
+                    <p class="uppercase text-grey-100 justify-center flex gap-2 items-center"><span
+                            class="block w-2 h-2 bg-purple rounded-full"></span>
+                        So'nggi yangiliklar</p>
+                    <a href="#" class="text-white hover:text-purple duration-300 font-bold text-3xl  pl-5">Keyingi
+                        yil boshidan
+                        O‘zbekistonda <br> koronavirusga
+                        qarshi dori ishlab
+                        <br>chiqarilishi kutilmoqda
+                    </a>
+                    <p class="text-grey-100">Bugun, 15:32 <a class="text-purple" href="#">Davlat</a></p>
                 </div>
             </div>
-            <div class="col-span-6">
-                <img src="./img/home2.png" alt="">
-            </div>
-            <div class="col-span-3">
-                <p>hello world</p>
+            <div class="col-span-3 ml-8">
+                <div class="flex items-center mb-8 font-semibold justify-between">
+                    <p class="uppercase py-3 px-9 w-full border-b-4 border-r-4 border-purple">Haftalik</p>
+                    <p class="uppercase py-3 px-9 w-full border-b-4 border-purple">Oylik</p>
+                </div>
+                <div class="flex flex-col items-center justify-center gap-6">
+                    <div class="flex gap-4 group">
+                        <img src="./img/weekly.png" class="h-[66px] items-start" alt="">
+                        <div>
+                            <p class="flex text-xs mb-3 text-grey-400 gap-3">26-iyul 2022 <a href="#"
+                                    class="text-purple">Davlat</a></p>
+                            <a href="#" class="text-sm group-hover:text-purple duration-200">Toshkent konferensiyasidan
+                                real
+                                natijalar kutish o‘rinlimi?</a>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 group">
+                        <img src="./img/weekly.png" class="h-[66px] items-start" alt="">
+                        <div>
+                            <p class="flex text-xs mb-3 text-grey-400 gap-3">26-iyul 2022 <a href="#"
+                                    class="text-purple">Davlat</a></p>
+                            <a href="#" class="text-sm group-hover:text-purple duration-200">Toshkent konferensiyasidan
+                                real
+                                natijalar kutish o‘rinlimi?</a>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 group">
+                        <img src="./img/weekly.png" class="h-[66px] items-start" alt="">
+                        <div>
+                            <p class="flex text-xs mb-3 text-grey-400 gap-3">26-iyul 2022 <a href="#"
+                                    class="text-purple">Davlat</a></p>
+                            <a href="#" class="text-sm group-hover:text-purple duration-200">Toshkent konferensiyasidan
+                                real
+                                natijalar kutish o‘rinlimi?</a>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 group">
+                        <img src="./img/weekly.png" class="h-[66px] items-start" alt="">
+                        <div>
+                            <p class="flex text-xs mb-3 text-grey-400 gap-3">26-iyul 2022 <a href="#"
+                                    class="text-purple">Davlat</a></p>
+                            <a href="#" class="text-sm group-hover:text-purple duration-200">Toshkent konferensiyasidan
+                                real
+                                natijalar kutish o‘rinlimi?</a>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 group">
+                        <img src="./img/weekly.png" class="h-[66px] items-start" alt="">
+                        <div>
+                            <p class="flex text-xs mb-3 text-grey-400 gap-3">26-iyul 2022 <a href="#"
+                                    class="text-purple">Davlat</a></p>
+                            <a href="#" class="text-sm group-hover:text-purple duration-200">Toshkent konferensiyasidan
+                                real
+                                natijalar kutish o‘rinlimi?</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
