--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <body class="text-white font-poppins">
 
     <header style="z-index: 10000;"
-        class="w-full duration-200 fixed shadow-lg px-[5rem] border-b border-grey-200 pb-6 top-0">
+        class="w-full duration-200 fixed shadow-2xl px-[5rem] border-b border-grey-200 pb-6 top-0">
         <div class="flex items-center py-8 justify-between">
             <div class="flex items-center gap-5">
                 <p>Toshkent</p>
                 <div class="flex items-center gap-2">
-                    <img class="header-img" src="./img/weather.png" alt="">
+                    <img src="./img/weather.png" alt="">
                     <p>28°C</p>
                 </div>
             </div>
             <div>
                 <a href="#">
-                    <img src="./img/aksent logo.png" alt="">
+                    <img class="header-img" src="./img/aksent logo.png" alt="">
                 </a>
             </div>
             <div>
@@ -41,7 +41,7 @@
                 </select>
             </div>
         </div>
-        <div class="flex hidden  items-center justify-between">
+        <div class="flex items-center justify-between">
             <div class="flex items-center uppercase font-medium gap-6">
                 <a class="hover:text-purple duration-200" href="#">Siyosat</a>
                 <a class="hover:text-purple duration-200" href="#">Jamiyat</a>
@@ -74,27 +74,27 @@
                 <p class="text-sm text-purple">Davlat</p>
             </div>
             <div class="flex flex-col items-center">
-                <div class="mb-12">
+                <div class="mb-12 flex flex-col gap-2">
                     <p class="text-xs text-grey-100">Tahlil</p>
-                    <a href="#" class="hover:text-purple duration-300 my-2 font-bold">Davlat rahbari vazirlik, hokimlik
+                    <a href="#" class="hover:text-purple duration-300 font-bold">Davlat rahbari vazirlik, hokimlik
                         va idoralar <br> bilan navbatdan
                         tashqari
                         yig‘ilishini o‘tkazdi
                     </a>
                     <p class="text-xs text-purple">Davlat</p>
                 </div>
-                <div class="mb-12">
+                <div class="mb-12 flex flex-col gap-2">
                     <p class="text-xs text-grey-100">Tahlil</p>
-                    <a href="#" class="hover:text-purple duration-300 my-2 font-bold">Davlat rahbari vazirlik, hokimlik
+                    <a href="#" class="hover:text-purple duration-300 font-bold">Davlat rahbari vazirlik, hokimlik
                         va idoralar <br> bilan navbatdan
                         tashqari
                         yig‘ilishini o‘tkazdi
                     </a>
                     <p class="text-xs text-purple">Davlat</p>
                 </div>
-                <div class="mb-12">
+                <div class="mb-12 flex flex-col gap-2">
                     <p class="text-xs text-grey-100">Tahlil</p>
-                    <a href="#" class="hover:text-purple duration-300 my-2 font-bold">Davlat rahbari vazirlik, hokimlik
+                    <a href="#" class="hover:text-purple duration-300 font-bold">Davlat rahbari vazirlik, hokimlik
                         va idoralar <br> bilan navbatdan
                         tashqari
                         yig‘ilishini o‘tkazdi
@@ -104,7 +104,7 @@
             </div>
         </div>
 
-        <div class="px-[5rem] mt-[100px] flex justify-between">
+        <div class="px-[5rem] mt-[50px] flex justify-between">
             <a href="#">
                 <div class="relative">
                     <img src="./img/image 19.png" class="border border-white" alt="">
@@ -201,7 +201,7 @@
             </div>
             <div class="col-span-6 relative flex flex-col items-center justify-center">
                 <img src="./img/home2.png" class="w-full" alt="">
-                <div class="absolute text-center bottom-10">
+                <div class="absolute text-center flex flex-col gap-4 bottom-10">
                     <p class="uppercase text-grey-100 justify-center flex gap-2 items-center"><span
                             class="block w-2 h-2 bg-purple rounded-full"></span>
                         So'nggi yangiliklar</p>
@@ -216,10 +216,14 @@
             </div>
             <div class="col-span-3 ml-8">
                 <div class="flex items-center mb-8 font-semibold justify-between">
-                    <p class="uppercase py-3 px-9 w-full border-b-4 border-r-4 border-purple">Haftalik</p>
-                    <p class="uppercase py-3 px-9 w-full border-b-4 border-purple">Oylik</p>
+                    <p id="weakly" class="uppercase duration-300 py-3 px-9 w-full border-b-2 border-purple bg-grey-500">
+                        Haftalik</p>
+                    <p id="monthly"
+                        class="flex items-center justify-center uppercase duration-300 border-b-2 py-3 w-full border-purple">
+                        Oylik
+                    </p>
                 </div>
-                <div class="flex flex-col items-center justify-center gap-6">
+                <div id="about-center" class="flex flex-col items-center justify-center gap-6">
                     <div class="flex gap-4 group">
                         <img src="./img/weekly.png" class="h-[66px] items-start" alt="">
                         <div>
@@ -307,21 +311,7 @@
             }
         }
     </script>
-
-    <script>
-        window.addEventListener('scroll', () => {
-            const header = document.querySelector('header');
-            const headerImg = document.querySelector('.header-img')
-
-            if (window.scrollY > 100) {
-                header.classList.add('bg-white')
-                header.classList.add('text-black')
-            } else {
-                header.classList.remove('bg-white')
-                header.classList.remove('text-black')
-            }
-        })
-    </script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
