--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             </a>
         </div>
     </section>
+
     <section class="bg-white w-screen mt-[150px] text-black px-[5rem] h-screen">
         <div class="grid grid-cols-12">
             <div class="col-span-3 h-full border border-r-transparent px-7 py-4 border-grey-300">
@@ -277,7 +278,71 @@
                 </div>
             </div>
         </div>
+
+        <div class="mt-[96px] flex text-black mb-5 items-center justify-between">
+            <p></p>
+            <p class="text-center font-bold text-3xl">Munosabat</p>
+            <p class="flex gap-3 group items-center">Barchasi <i
+                    class="fa-solid group-hover:translate-x-1 duration-200 fa-chevron-right"></i>
+            </p>
+        </div>
+
+        <div class="flex items-center gap-8">
+            <a href="#">
+                <div class="flex flex-col gap-5 border p-5 hover:border-purple hover:bg-grey-500 duration-200">
+                    <p class="font-semibold">Xalq deputatlari Toshkent shahar Kengashi deputatlarining saylangan
+                        okruglaridagi dolzarb muammolarni
+                        hal qilish bo‘yi...</p>
+                    <div class="flex gap-3">
+                        <img src="./img/attidute.png" alt="">
+                        <p class="flex flex-col font-semibold">Xushnudbek.uz <span
+                                class="font-normal text-sm text-grey-600">27 iyul
+                                2021</span></p>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="flex flex-col gap-5 border p-5 hover:border-purple hover:bg-grey-500 duration-200">
+                    <p class="font-semibold">Xalq deputatlari Toshkent shahar Kengashi deputatlarining saylangan
+                        okruglaridagi dolzarb muammolarni
+                        hal qilish bo‘yi...</p>
+                    <div class="flex gap-3">
+                        <img src="./img/attidute.png" alt="">
+                        <p class="flex flex-col font-semibold">Xushnudbek.uz <span
+                                class="font-normal text-sm text-grey-600">27 iyul
+                                2021</span></p>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="flex flex-col gap-5 border p-5 hover:border-purple hover:bg-grey-500 duration-200">
+                    <p class="font-semibold">Xalq deputatlari Toshkent shahar Kengashi deputatlarining saylangan
+                        okruglaridagi dolzarb muammolarni
+                        hal qilish bo‘yi...</p>
+                    <div class="flex gap-3">
+                        <img src="./img/attidute.png" alt="">
+                        <p class="flex flex-col font-semibold">Xushnudbek.uz <span
+                                class="font-normal text-sm text-grey-600">27 iyul
+                                2021</span></p>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="flex flex-col gap-5 border p-5 hover:border-purple hover:bg-grey-500 duration-200">
+                    <p class="font-semibold">Xalq deputatlari Toshkent shahar Kengashi deputatlarining saylangan
+                        okruglaridagi dolzarb muammolarni
+                        hal qilish bo‘yi...</p>
+                    <div class="flex gap-3">
+                        <img src="./img/attidute.png" alt="">
+                        <p class="flex flex-col font-semibold">Xushnudbek.uz <span
+                                class="font-normal text-sm text-grey-600">27 iyul
+                                2021</span></p>
+                    </div>
+                </div>
+            </a>
+        </div>
     </section>
+
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -293,7 +358,7 @@
                 extend: {
                     colors: {
                         purple: {
-                            DEFAULT: "#7B7BFF"
+                            DEFAULT: "#7B7BFF",
                         },
                         black: {
                             DEFAULT: "#151515"
@@ -304,7 +369,8 @@
                             200: '#FFFFFF33',
                             300: '#1515150F',
                             400: '#A1A1A1',
-                            500: '#F2F2FA'
+                            500: '#F2F2FA',
+                            600: '#959595'
                         }
                     },
                 }
